<resources>
    <string name="app_name">Random</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedback_label">Feedback</string>
    <string name="rate_label">Rate</string>
    <string name="share_label">Share</string>
    <string name="lucky_number_label">Lucky Number</string>
    <string name="yes_or_no_label">Yes Or No</string>
    <string name="choose_item_label">Choose Item</string>
    <string name="RPS_label">R-P-S</string>
    <string name="coin_label">Coin</string>
    <string name="color_label">Color</string>
    <string name="dice_roller_label">Dice Roller</string>
    <string name="start_label">Start</string>
    <string name="to_label">To</string>
    <string name="enter_here_label">Enter here</string>
    <string name="enter_wrong_label">Enter wrong</string>
    <string name="result_label">Result</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="run_label">Run</string>
    <string name="flip_it_label">Flip it</string>
    <string name="click_to_add_item_label">Click to add item</string>
    <string name="select_item_label">Select Item</string>
    <string name="input_item_label">Input Item</string>
    <string name="item_selected_label">Item selected: </string>
    <string name="input_number_dice_label">Input number dice</string>
    <string name="please_input_number_dice">Please input number dice</string>
    <string name="maximum_fore_dice">Maximum 4 dice</string>
    <string name="this_feature_will_be_update_in_next_version">This feature will be updated in next version</string>
    <string name="code_color">Code color</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rotate_bottle_label">Rotate Bottle</string>
    <string name="rotate_label">Rotate</string>
</resources>