<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RPSFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llResult"
        android:gravity="center"
        android:background="@drawable/bg_show_result"
        android:layout_margin="@dimen/dp10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edtNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <TextView
            android:id="@+id/tvError"
            android:visibility="gone"
            android:textSize="@dimen/sp20"
            android:textColor="@color/red"
            android:text="@string/maximum_fore_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.example.random.CustomDice
            android:gravity="center"
            android:id="@+id/imvResult"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <EditText
        android:id="@+id/edtNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llResult"
        app:layout_constraintBottom_toTopOf="@+id/tvRun"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginVertical="@dimen/dp10"
        android:inputType="number"
        android:hint="@string/input_number_dice_label"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvRun"
        android:layout_marginBottom="@dimen/dp40"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/sp23"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/dp10"
        android:textColor="@color/white"
        android:paddingVertical="@dimen/dp10"
        android:background="@drawable/bg_button_go"
        android:text="@string/run_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>