<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">
    <LinearLayout
        android:id="@+id/llTop"
        android:background="@drawable/shape_bg_top_home"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp80"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/imvMenu"
            android:layout_marginStart="@dimen/dp15"
            android:src="@drawable/ic_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_marginStart="@dimen/dp10"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/sp23"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>

        <ImageView
            android:id="@+id/imvShowItem"
            android:src="@drawable/ic_grill_item"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvItemHome"
        app:layout_constraintTop_toBottomOf="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:paddingTop="@dimen/dp10"
        android:paddingBottom="@dimen/dp60"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <LinearLayout
        android:id="@+id/llNavigationDrawer"
        android:layout_width="@dimen/dp220"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/viewHide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp200"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_random" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp20" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0_5"
            android:layout_marginHorizontal="@dimen/dp5"
            android:background="@color/color2C2B2B" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginTop="@dimen/dp18"
            android:drawableLeft="@drawable/ic_feedback"
            android:drawablePadding="@dimen/dp8"
            android:gravity="center_vertical"
            android:text="@string/feedback_label"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginTop="@dimen/dp18"
            android:drawableLeft="@drawable/ic_rate"
            android:drawablePadding="@dimen/dp8"
            android:gravity="center_vertical"
            android:text="@string/rate_label"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginTop="@dimen/dp18"
            android:drawableLeft="@drawable/ic_share"
            android:drawablePadding="@dimen/dp8"
            android:gravity="center_vertical"
            android:text="@string/share_label"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/privacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginTop="@dimen/dp18"
            android:drawableLeft="@drawable/ic_key"
            android:drawablePadding="@dimen/dp8"
            android:gravity="center_vertical"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14" />

    </LinearLayout>

    <View
        android:id="@+id/viewHide"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llNavigationDrawer"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>