<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp"
    android:layout_gravity=""
    android:background="?attr/colorOnPrimary"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/input_item_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/edtInput"
            android:visibility="visible"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:layout_marginVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_editext"
            android:ems="10"
            android:textColorLink="@color/black"
            android:hint="@string/input_item_label"
            android:paddingLeft="0dp" />



        <LinearLayout
            android:id="@+id/llButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no_label"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <View
                android:background="@color/colorF1F0F0"
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yes_label"
                android:textAllCaps="false"
                android:textColor="@color/color03A9F4"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>